# senior_design

./: .gitignore  .gitmodules  README.md  README.md.txt
carrier_board/Carrier Board/: CBPcbLib.PcbLib  CBSchLib.SchLib  Carrier Board.PrjPcb  Carrier Board.PrjPcbStructure  ModuleInter.SchDoc  Power.SchDoc
carrier_board/Carrier Board/Project Outputs for Carrier Board/: CarrierBoard-macro.APR_LIB  CarrierBoard.DRR  CarrierBoard.EXTREP  CarrierBoard.G1  CarrierBoard.G2  CarrierBoard.GBL  CarrierBoard.GBO  CarrierBoard.GBP  CarrierBoard.GBS  CarrierBoard.GD1  CarrierBoard.GG1  CarrierBoard.GKO  CarrierBoard.GM  CarrierBoard.GM1  CarrierBoard.GM13  CarrierBoard.GM14  CarrierBoard.GM15  CarrierBoard.GM16  CarrierBoard.GM2  CarrierBoard.GM20  CarrierBoard.GM3  CarrierBoard.GM4  CarrierBoard.GM5  CarrierBoard.GM6  CarrierBoard.GPB  CarrierBoard.GPT  CarrierBoard.GTL  CarrierBoard.GTO  CarrierBoard.GTP  CarrierBoard.GTS  CarrierBoard.LDP  CarrierBoard.REP  CarrierBoard.TXT  CarrierBoard.apr  Design Rule Check - CarrierBoard.drc  Design Rule Check - CarrierBoard.html  Status Report.Txt
carrier_board/Carrier Board/__Previews/: ModuleInter.SchDocPreview  Power.SchDocPreview  Sheet1.SchDocPreview
firmware/: README.md
firmware/Platformio/: Useful_PIO_commands.md  platformio.ini
firmware/Platformio/include/: config.h  main.h  pinout.h  uart_messages.h  util.h
firmware/Platformio/lib/CameraGimbal/: CameraGimbal.cpp  CameraGimbal.h
firmware/Platformio/lib/Encoder/: README.md
firmware/Platformio/lib/Fields/: Fields.h
firmware/Platformio/lib/HTS221/: HTS221.cpp  HTS221.h
firmware/Platformio/lib/I2C_Def/: I2C_Def.cpp  I2C_Def.h
firmware/Platformio/src/: main.cpp
firmware/Platformio_test/: platformio.ini
firmware/Platformio_test/include/: pinout.h
firmware/Platformio_test/src/: main.cpp
firmware/desktop/: README.md  README_f710.md  README_runatboot.md  basestation_comms.py  comms.py  jetson_comms.py  plotting_test.py  runatbootconfig.sh  runcomms  uart_messages_pb2.py  virtual_device_Xmode.py  virtual_device_read.py
firmware/desktop/basestation/: roverStatusPublisher.py  uart_messages_pb2.py
firmware/desktop/jetson/: better_jetson_comms.py  jetson_comms.py  uart_messages_pb2.py
firmware/motor_drives_test/: motor_drives_test.ino
firmware/proto/: generate.sh  uart_messages.proto
fritzing/: BNO055.fzz  Hardware Diagram.fzz  Teensy 4.1-fized.fzpz
headlight/Headlight/: Headlight.PrjPcb  Sheet1.SchDoc
headlight/Headlight/__Previews/: Sheet1.SchDocPreview
msg/: _CameraModel.py  _CameraModels.py  _EnvSensor.py  _GPS.py  _GlobalDescriptor.py  _Goal.py  _Info.py  _KeyPoint.py  _Link.py  _MapData.py  _MapGraph.py  _NodeData.py  _OdomInfo.py  _Path.py  _Point2f.py  _Point3f.py  _RGBDImage.py  _RGBDImages.py  _ScanDescriptor.py  _UserData.py
network_stuff/: .gitignore  CMakeLists.txt  README.md.txt  createHotSpot.cpp  sendData.cpp
network_stuff/baseStation/: .gitignore  CMakeLists.txt
network_stuff/baseStation/include/: baseStationGUI.h  baseStationGUINetworking.h  baseStationNetworking.h  receiveCameraFeed.h
network_stuff/baseStation/lib/: baseStationGUI.cpp  baseStationGUINetworking.cpp  baseStationNetworking.cpp  receiveCameraFeed.cpp
network_stuff/baseStation/ros/: cameraFeedWireNode.cpp  cameraPositionWireNode.cpp  pointCloudWireNode.cpp  roverCommandsWireNode.cpp  roverStatusWireNode.cpp
network_stuff/baseStation/src/: baseStationApp.cpp  baseStationConnections.cpp  testTransmit.cpp
network_stuff/common/: common.h
network_stuff/networkLibrary/: .gitignore  CMakeLists.txt
network_stuff/networkLibrary/include/: passThroughWire.h  receiveData.h  transmitData.h  transmitSubscriber.h
network_stuff/networkLibrary/lib/: passThroughWire.cpp  receiveData.cpp  transmitData.cpp
network_stuff/networkLibrary/src/: testNetworkClass.cpp
network_stuff/networkTest/: receiveData.cpp
network_stuff/rosPublishers/: README.txt  baseStationPublisher.py  cameraPositionPublisher.py  cameraPositionPublisherNode.py  getImportNames.py  imageFeedPublisherNode.py  imagePublisher.py  imagePublisher2.py  pleaseDaddyROSWork.py  pointCloudPublisher.py  pointCloudPublisherNode.py  rosDaddyPublisher.py  roverStatusPublisher.py  uwuMultipleNodes.py
network_stuff/rover/: CMakeLists.txt
network_stuff/rover/include/: roverNetworking.h
network_stuff/rover/lib/: roverNetworking.cpp
network_stuff/rover/ros/: cameraFeedWireNode.cpp  cameraPositionWireNode.cpp  roverCommandsWireNode.cpp  roverStatusWireNode.cpp
network_stuff/rover/src/: roverConnections.cpp  testImageTransmit.cpp  testReceive.cpp
network_stuff/test_script/: testImageStream.py  testReadData.py  testWriteData.py  testWriteImage.py
networking_stuff/: CMakeLists.txt
networking_stuff/include/: common.h
networking_stuff/src/: pointCloudWireNode.cpp
ros_stuff/: README.md
ros_stuff/baseStation/base_station_publishers/: CMakeLists.txt  package.xml
ros_stuff/baseStation/networking_stuff/: CMakeLists.txt  package.xml
ros_stuff/rover/networking_stuff/: CMakeLists.txt  package.xml
ros_stuff/rover/rover_publishers/: CMakeLists.txt  package.xml
software/cv/: cv-pipeline.cpp  cv-pipeline.py  drawing_utils.py  pose_estimation_mediapipe.py  realsense.py  webcam_mediapipe.py  webcam_movenet.py  webcam_movenet_single_tf.py  webcam_movenet_tf.py  webcam_movenet_tflite.py  webcam_test.py
software/cv/custom_models/: MPII_Dataset.py  SupervisedMLFramework.py  data_pipeline.py  data_viz.ipynb  mpii_data_viz.ipynb  test_framework.ipynb
software/cv/model_benchmarks/: mediapipe_benchmark.py  movenet_benchmark.py  movenet_single_benchmark.py
software/cv/pretrained_model_scripts/: CMakeLists.txt  cropping_utils.py  cv-pipeline.py  pose_estimation_mediapipe.py  test.py  webcam_mediapipe.py  webcam_movenet_tf.py  webcam_test.py
software/slam/: calc_err.py  calib.py  depth.py  left.yaml  localization.py  mapCloud.py  mapDataPublisher.py  mapDataSubscriber.py  mapping.py  pointCloudData.py  pose_to_odom.py  right.yaml  rosMapToRos2Map.py  transform.py
software/slam/mapping/: rs_rtab.launch
(+98 files in other folders)
